1.6/_sources/modules/generated/sklearn.gaussian_process.GaussianProcessRegressor.rst.txt
GaussianProcessRegressor
========================

.. currentmodule:: sklearn.gaussian_process

.. autoclass:: GaussianProcessRegressor
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.gaussian_process.GaussianProcessRegressor sklearn.gaussian_process.GaussianProcessRegressor.__init__ sklearn.gaussian_process.GaussianProcessRegressor.fit sklearn.gaussian_process.GaussianProcessRegressor.get_metadata_routing sklearn.gaussian_process.GaussianProcessRegressor.get_params sklearn.gaussian_process.GaussianProcessRegressor.log_marginal_likelihood sklearn.gaussian_process.GaussianProcessRegressor.predict sklearn.gaussian_process.GaussianProcessRegressor.sample_y sklearn.gaussian_process.GaussianProcessRegressor.score sklearn.gaussian_process.GaussianProcessRegressor.set_params sklearn.gaussian_process.GaussianProcessRegressor.set_predict_request sklearn.gaussian_process.GaussianProcessRegressor.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -