1.7/_sources/modules/generated/sklearn.gaussian_process.GaussianProcessRegressor.rst.txt
GaussianProcessRegressor
========================

.. currentmodule:: sklearn.gaussian_process

.. autoclass:: GaussianProcessRegressor
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.gaussian_process.GaussianProcessRegressor sklearn.gaussian_process.GaussianProcessRegressor.__delattr__ sklearn.gaussian_process.GaussianProcessRegressor.__dir__ sklearn.gaussian_process.GaussianProcessRegressor.__eq__ sklearn.gaussian_process.GaussianProcessRegressor.__format__ sklearn.gaussian_process.GaussianProcessRegressor.__ge__ sklearn.gaussian_process.GaussianProcessRegressor.__getattribute__ sklearn.gaussian_process.GaussianProcessRegressor.__getstate__ sklearn.gaussian_process.GaussianProcessRegressor.__gt__ sklearn.gaussian_process.GaussianProcessRegressor.__hash__ sklearn.gaussian_process.GaussianProcessRegressor.__init__ sklearn.gaussian_process.GaussianProcessRegressor.__init_subclass__ sklearn.gaussian_process.GaussianProcessRegressor.__le__ sklearn.gaussian_process.GaussianProcessRegressor.__lt__ sklearn.gaussian_process.GaussianProcessRegressor.__ne__ sklearn.gaussian_process.GaussianProcessRegressor.__new__ sklearn.gaussian_process.GaussianProcessRegressor.__reduce__ sklearn.gaussian_process.GaussianProcessRegressor.__reduce_ex__ sklearn.gaussian_process.GaussianProcessRegressor.__repr__ sklearn.gaussian_process.GaussianProcessRegressor.__setattr__ sklearn.gaussian_process.GaussianProcessRegressor.__setstate__ sklearn.gaussian_process.GaussianProcessRegressor.__sizeof__ sklearn.gaussian_process.GaussianProcessRegressor.__sklearn_clone__ sklearn.gaussian_process.GaussianProcessRegressor.__sklearn_tags__ sklearn.gaussian_process.GaussianProcessRegressor.__str__ sklearn.gaussian_process.GaussianProcessRegressor.__subclasshook__ sklearn.gaussian_process.GaussianProcessRegressor._build_request_for_signature sklearn.gaussian_process.GaussianProcessRegressor._constrained_optimization sklearn.gaussian_process.GaussianProcessRegressor._get_default_requests sklearn.gaussian_process.GaussianProcessRegressor._get_doc_link sklearn.gaussian_process.GaussianProcessRegressor._get_metadata_request sklearn.gaussian_process.GaussianProcessRegressor._get_param_names sklearn.gaussian_process.GaussianProcessRegressor._get_params_html sklearn.gaussian_process.GaussianProcessRegressor._html_repr sklearn.gaussian_process.GaussianProcessRegressor._repr_html_inner sklearn.gaussian_process.GaussianProcessRegressor._repr_mimebundle_ sklearn.gaussian_process.GaussianProcessRegressor._validate_params sklearn.gaussian_process.GaussianProcessRegressor.fit sklearn.gaussian_process.GaussianProcessRegressor.get_metadata_routing sklearn.gaussian_process.GaussianProcessRegressor.get_params sklearn.gaussian_process.GaussianProcessRegressor.log_marginal_likelihood sklearn.gaussian_process.GaussianProcessRegressor.predict sklearn.gaussian_process.GaussianProcessRegressor.sample_y sklearn.gaussian_process.GaussianProcessRegressor.score sklearn.gaussian_process.GaussianProcessRegressor.set_params sklearn.gaussian_process.GaussianProcessRegressor.set_predict_request sklearn.gaussian_process.GaussianProcessRegressor.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -